--- a/HTML et CSS/Partie 3/CV/CV.html
+++ b/HTML et CSS/Partie 3/CV/CV.html
@@ -17,23 +17,31 @@
         </p>
     </aside>
 
-    <h2>Mon expérience</h2>
-    <ul>
-        <li><strong>Juillet-aout 2016 : </strong> Student Helpdesk and Infrastructure Engineer à IBA</li>
-        <li><strong>Fevrier-mai 2016 : </strong> Trainee Helpdesk Engineer à IBA</li>
-    </ul>
-    <h2>Mes compétences</h2>
-    <ul>
-        <li>Administrateur système</li>
-        <li>Administrateur réseau</li>
-        <li>Développeur Web</li>
-    </ul>
-    <h2>Ma formation</h2>
-    <ul>
-        <li><strong>2014-2016 : </strong> Baccalauréat en Informatique et systèmes finalité <em>Technologie de l'informatique</em> à l'Hénallux.</li>
-        <li><strong>2012-2014 : </strong> Première et seconde année du baccalauréat en <em>Sciences informatiques</em> à l'Unamur.</li>
-        <li><strong>2011-2012 : </strong> Première année du baccalauréat en <em>Ingénierie de gestion</em> à l'Unamur.</li>
-    </ul>
+    <div class="wrapper">
+        <section>
+            <h2>Mon expérience</h2>
+            <ul>
+                <li><span class="bold">Juillet-aout 2016 : </span> Student Helpdesk and Infrastructure Engineer à IBA</li>
+                <li><span class="bold">Fevrier-mai 2016 : </span> Trainee Helpdesk Engineer à IBA</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Mes compétences</h2>
+            <ul>
+                <li>Administrateur système</li>
+                <li>Administrateur réseau</li>
+                <li>Développeur Web</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Ma formation</h2>
+            <ul>
+                <li><span class="bold">2014-2016 : </span> Baccalauréat en Informatique et systèmes finalité <em>Technologie de l'informatique</em> à l'Hénallux.</li>
+                <li><span class="bold">2012-2014 : </span> Première et seconde année du baccalauréat en <em>Sciences informatiques</em> à l'Unamur.</li>
+                <li><span class="bold">2011-2012 : </span> Première année du baccalauréat en <em>Ingénierie de gestion</em> à l'Unamur.</li>
+            </ul>
+        </section>
+    </div>
 </body>
 
 </html>
