Changement du titre h2 du header

--- a/HTML et CSS/Partie 3/TP/index.html
+++ b/HTML et CSS/Partie 3/TP/index.html
@@ -15,7 +15,7 @@
                     <img src="images/zozor_logo.png" alt="Logo de Zozor" />
                     <h1>Zozor</h1>
                 </div>
-                <h2>Carnets de voyage</h2>
+                <h2>Carnets de voyage de Zozor</h2>
             </div>
 
             <nav>
