Partie 3 - réalisation du CV

--- a/HTML et CSS/Partie 3/CV/CV.html
+++ b/HTML et CSS/Partie 3/CV/CV.html
@@ -8,24 +8,24 @@
 </head>
 
 <body>
-    <aside id="lisere">
+    <aside>
         <h1>Hadrien Guyette</h1>
-        <p id="jobtitle">Junior Web developer</p>
         <!-- Photo à changer pour une JPEG -->
         <p id="photo">
             <a href="Images/photo.png" title="Agrandir la photo"><img src="Images/photo-miniature.png" alt="Photo d'Hadrien Guyette"></a>
         </p>
+        <p id="jobtitle">Junior Web developer</p>
     </aside>
 
     <div class="wrapper">
-        <section>
+        <section id="experience">
             <h2>Mon expérience</h2>
             <ul>
-                <li><span class="bold">Juillet-aout 2016 : </span> Student Helpdesk and Infrastructure Engineer à IBA</li>
-                <li><span class="bold">Fevrier-mai 2016 : </span> Trainee Helpdesk Engineer à IBA</li>
+                <li><div class="date">Juillet-aout 2016</div> <div class="description">Student Helpdesk and Infrastructure Engineer à IBA</div></li>
+                <li><div class="date">Fevrier-mai 2016</div> <div class="description">Trainee Helpdesk Engineer à IBA</div></li>
             </ul>
         </section>
-        <section>
+        <section id="competences">
             <h2>Mes compétences</h2>
             <ul>
                 <li>Administrateur système</li>
@@ -33,12 +33,12 @@
                 <li>Développeur Web</li>
             </ul>
         </section>
-        <section>
+        <section id="formation">
             <h2>Ma formation</h2>
             <ul>
-                <li><span class="bold">2014-2016 : </span> Baccalauréat en Informatique et systèmes finalité <em>Technologie de l'informatique</em> à l'Hénallux.</li>
-                <li><span class="bold">2012-2014 : </span> Première et seconde année du baccalauréat en <em>Sciences informatiques</em> à l'Unamur.</li>
-                <li><span class="bold">2011-2012 : </span> Première année du baccalauréat en <em>Ingénierie de gestion</em> à l'Unamur.</li>
+                <li><div class="date">2014-2016</div> <div class="description">Baccalauréat en Informatique et systèmes finalité <em>Technologie de l'informatique</em> à l'Hénallux.</div></li>
+                <li><div class="date">2012-2014</div> <div class="description">Première et seconde année du baccalauréat en <em>Sciences informatiques</em> à l'Unamur.</div></li>
+                <li><div class="date">2011-2012</div> <div class="description">Première année du baccalauréat en <em>Ingénierie de gestion</em> à l'Unamur.</div></li>
             </ul>
         </section>
     </div>
