--- a/HTML et CSS/Partie 4/CV/CV.html
+++ b/HTML et CSS/Partie 4/CV/CV.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width" />
     <title>Hadrien Guyette</title>
-    <link rel="stylesheet" href="CV.css">
+	<link rel="stylesheet" type="text/css" href="CV.css" />
 </head>
 
 <body>
