--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="output"></div>
+    <div id="position"></div>
     <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
